# league_of_legends-lakehouse

./: .claudeignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  databricks.yml  pyproject.toml  readme.md  requirements-dev.txt
airflow/: .env.example  Dockerfile  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: dag_riot_api_ingestion.py
databricks/gold/: gold_draft.py  gold_player_frames_indexed.py  gold_player_performance.py  gold_team_stats.py  gold_validation.py
databricks/silver/: silver_accounts.py  silver_match_participants.py  silver_match_participants_amend.py  silver_match_teams.py  silver_matches.py  silver_timeline_events.py  silver_timeline_frames.py  silver_validation.py
infra/terraform/: main.tf
specs/: gold-layer.md  silver-layer.md
src/extract/: config.py  extract_accounts.py  extract_matches.py  main.py  riot_api_client.py
src/upload/: config.py  databricks_sql.py  dbfs_client.py  main.py  upload_bronze.py  upload_gold.py
tests/unit/: test_dbfs_client.py  test_extract_accounts.py  test_extract_matches.py  test_riot_api_client.py  test_upload_bronze.py
